# Auth_system

./: .env_example  .gitignore  README.md  docker-compose.yml
app/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
app/src/auth_app/: base_views.py  middleware.py  mock_data.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
app/src/auth_app/management/commands/: init_rbac.py
app/src/auth_app/migrations/: 0001_initial.py
app/src/config/: settings.py  urls.py
